Fixed spacing of multiline metadata in hpctardis

--- a/tardis/apps/hpctardis/static/css/hpctardis.css
+++ b/tardis/apps/hpctardis/static/css/hpctardis.css
@@ -1,7 +1,9 @@
 
 
 .dataset_metadata li {
-        line-height: 80%;
+        line-height: 120%;
         margin-top: 10px;
     }
+    
+    
     
